# crowbar

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml.example  go.mod  go.sum  main.go  style.css
src/: bar.rs  config.rs  css.rs  main.rs
src/audio/: audio.go
src/battery/: battery.go
src/brightness/: brightness.go
src/connectivity/: bluetooth.go  wifi.go
src/hyprland/: client.go  client.rs  events.go  events.rs  mod.rs
src/layershell/: layershell.go
src/media/: media.go
src/modules/: app_finder.rs  app_tracker.rs  audio.rs  battery.rs  brightness.rs  clock.rs  connectivity.rs  media.rs  mod.rs  power.rs  power_menu.rs  settings.rs  systray.rs  window_title.rs  workspaces.rs
src/power/: power.go
src/status/: apptracker.go  audio.go  bar.go  battery.go  brightness.go  clock.go  connectivity.go  media.go  power.go  powerbutton.go  systray.go  windowtitle.go  workspaces.go
src/system/: app_finder.rs  audio.rs  battery.rs  brightness.rs  connectivity.rs  media.rs  mod.rs  power.rs
src/systray/: systray.go
